--- a/atividade002- js/didatica.html
+++ b/atividade002- js/didatica.html
@@ -18,10 +18,10 @@
         <h3>************Arroz ************************Sabonete ******************** Feijão **********************Batata ************************</h3>
 
         <figure>
-          <img src="arroz.jpg" width="250px" height="150">
-          <img src="sabonete.jpg" width="250px" height="150">
-          <img src="feijao.jpg" width="250px" height="150">
-          <img src="batata.jpg" width="250px" height="150">
+          <img src="imagens/arroz.jpg" width="250px" height="150">
+          <img src="imagens/sabonete.jpg" width="250px" height="150">
+          <img src="imagens/feijao.jpg" width="250px" height="150">
+          <img src="imagens/batata.jpg" width="250px" height="150">
         </figure>
 
         <select name="g1" id="g1">
@@ -39,10 +39,10 @@
         <h3>************Bicicleta *********************Carro********************Algodão Doce**********************Moto************************</h3>
 
         <figure>
-          <img src="bicicleta.jpg" width="250px" height="150" >
-          <img src="carro.png" width="250px" height="150">
-          <img src="algodao.jpg" width="250px" height="150">
-          <img src="moto.png" width="250px" height="150">
+          <img src="imagens/bicicleta.jpg" width="250px" height="150" >
+          <img src="imagens/carro.png" width="250px" height="150">
+          <img src="imagens/algodao.jpg" width="250px" height="150">
+          <img src="imagens/moto.png" width="250px" height="150">
         </figure>
 
         <select name="g2" id="g2">
@@ -60,10 +60,10 @@
         <h3>************Oculos*********************Cadeira de Praia***************Sombrinha**************Máquina de Lavar*********************</h3>
 
         <figure>
-          <img src="oculos.jpeg" width="250px" height="150">
-          <img src="cadeiradepraia.jpg" width="250px" height="150">
-          <img src="sombrinha.jpg" width="250px" height="150">
-            <img src="maquina.jpg" width="250px" height="150">
+          <img src="imagens/oculos.jpeg" width="250px" height="150">
+          <img src="imagens/cadeiradepraia.jpg" width="250px" height="150">
+          <img src="imagens/sombrinha.jpg" width="250px" height="150">
+            <img src="imagens/maquina.jpg" width="250px" height="150">
         </figure>
 
 
@@ -82,10 +82,10 @@
         <h3>***************Bola*********************Skate**********************Patins***********************Chave de Fenda*********************</h3>
 
         <figure>
-          <img src="bola.jpg" width="250px" height="150">
-          <img src="skate.jpg" width="250px" height="150">
-          <img src="patins.jpg" width="250px" height="150">
-          <img src="chave.JPG" width="250px" height="150">
+          <img src="imagens/bola.jpg" width="250px" height="150">
+          <img src="imagens/skate.jpg" width="250px" height="150">
+          <img src="imagens/patins.jpg" width="250px" height="150">
+          <img src="imagens/chave.JPG" width="250px" height="150">
         </figure>
 
         <select name="g4" id="g4">
@@ -103,10 +103,10 @@
         <h2>**********Figura 1*************Figura 2**************Figura 3*************Figura 4**********************</h2>
 
         <figure>
-          <img src="tri.jpg" width="250px" height="150">
-          <img src="quad.jpg" width="250px" height="150">
-          <img src="circ.jpg" width="250px" height="150">
-          <img src="ret.png" width="250px" height="150">
+          <img src="imagens/tri.jpg" width="250px" height="150">
+          <img src="imagens/quad.jpg" width="250px" height="150">
+          <img src="imagens/circ.jpg" width="250px" height="150">
+          <img src="imagens/ret.png" width="250px" height="150">
         </figure>
 
         <h3>Triangulo</h3>
